--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,6 +1,7 @@
 @import "global/_variables.css";
 @import "global/_global.css";
 @import "global/_mixins.css";
+@import "modules/_animations.css";
 @import "modules/_static-letters.css";
 @import "modules/_site-home.css";
 @import "modules/_site-about.css";
@@ -8,4 +9,3 @@
 @import "modules/_site-education.css";
 @import "modules/_site-skills.css";
 @import "modules/_page-header.css";
-@import "modules/_banner-animated.css";
