--- a/app/assets/styles/modules/_page-header.css
+++ b/app/assets/styles/modules/_page-header.css
@@ -6,10 +6,11 @@
     top: 0;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 2;
     background-color: $color-one-light;
     color: $color-two-dark;
     opacity: 0;
-    transition: opacity .5s ease;
+    transition: opacity 1s ease;
     @mixin atSmall {
         width: 30%;
         height: 3rem;
@@ -21,11 +22,16 @@
         text-transform: uppercase;
         letter-spacing: 1rem;
         line-height: 2rem;
+        transition: opacity 1s ease-in-out;
         @mixin atSmall {
             line-height: 3rem;
             font-size: 2rem;
         }
     }
+}
+
+.is-shown {
+    opacity: 1;
 }
 
 .odd-style {
