--- a/app/assets/styles/modules/_site-experience.css
+++ b/app/assets/styles/modules/_site-experience.css
@@ -1,4 +1,126 @@
-.site-experience{
-  height: 100vh;
-  position: relative;
+.site-experience {
+    height: 150vh;
+    position: relative;
+    background-color: #474e5d;
+    /* The actual timeline (the vertical ruler) */
+    &__timeline {
+        position: relative;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    &__timeline::after {
+        content: '';
+        position: absolute;
+        width: 6px;
+        background-color: white;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        margin-left: -3px;
+    }
+    /* Container around content */
+    &__container {
+        padding: 10px 40px;
+        position: relative;
+        background-color: inherit;
+        width: 50%;
+    }
+    /* The circles on the timeline */
+    &__container::after {
+        content: '';
+        position: absolute;
+        width: 25px;
+        height: 25px;
+        right: -12px;
+        background-color: white;
+        border: 4px solid #FF9F55;
+        top: 15px;
+        border-radius: 50%;
+        z-index: 1;
+    }
+    /* Place the container to the left */
+    &--left {
+        left: 0;
+    }
+    /* Place the container to the right */
+    &--right {
+        left: 50%;
+    }
+    /* Add arrows to the left container (pointing right) */
+    &--left::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 22px;
+        width: 0;
+        z-index: 1;
+        right: 30px;
+        border: medium solid white;
+        border-width: 10px 0 10px 10px;
+        border-color: transparent transparent transparent white;
+    }
+    /* Add arrows to the right container (pointing left) */
+    &--right::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 22px;
+        width: 0;
+        z-index: 1;
+        left: 30px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
+    /* Fix the circle for containers on the right side */
+    &--right::after {
+        left: -12px;
+    }
+    /* The actual content */
+    &__content {
+        padding: 20px 30px;
+        background-color: white;
+        position: relative;
+        border-radius: 6px;
+    }
+}
+
+.baz {
+    background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url('./assets/images/baz-img.png');
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+.invex {
+    background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url('./assets/images/invex-img.png');
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+.cco {
+    background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url('./assets/images/cco-img.png');
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+.aor {
+    background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url('./assets/images/aor-img.jpg');
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+.ace {
+    background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url('./assets/images/ace-img.jpg');
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
