--- a/app/assets/styles/modules/_static-letters.css
+++ b/app/assets/styles/modules/_static-letters.css
@@ -1,17 +1,17 @@
-.static-letters{
-  font-family: $font-big;
-  font-size: 5rem;
-  text-transform: uppercase;
-  position: fixed;
-
-  &__e{
-    color: $color-two-dark;
-    top: 0;
-    left: 1%;
-  }
-  &__n{
-    color: $color-one-dark;
-    bottom: 0;
-    right: 5px;
-  }
+.static-letters {
+    font-family: $font-big;
+    font-size: 5rem;
+    text-transform: uppercase;
+    position: fixed;
+    z-index: 5;
+    &__e {
+        color: $color-two-dark;
+        top: 0;
+        left: 1%;
+    }
+    &__n {
+        color: $color-one-dark;
+        bottom: 0;
+        right: 5px;
+    }
 }
