--- a/app/assets/styles/modules/_page-header.css
+++ b/app/assets/styles/modules/_page-header.css
@@ -1,6 +1,6 @@
 .page-header {
     display: inline-block;
-    width: 50%;
+    width: 100vw;
     height: 2rem;
     position: fixed;
     top: 0;
@@ -12,8 +12,8 @@
     opacity: 0;
     transition: opacity 1s ease;
     @mixin atSmall {
-        width: 30%;
-        height: 3rem;
+        //width: 30%;
+        height: 4rem;
     }
     &__text {
         font-size: 1rem;
@@ -24,8 +24,8 @@
         line-height: 2rem;
         transition: opacity 1s ease-in-out;
         @mixin atSmall {
-            line-height: 3rem;
-            font-size: 2rem;
+            line-height: 4rem;
+            font-size: 3rem;
         }
     }
 }
@@ -37,4 +37,22 @@
 .odd-style {
     background-color: $color-two-light;
     color: $color-one-dark;
+}
+
+
+/* The progress container (grey background) */
+
+.progress-container {
+    width: 100%;
+    height: 8px;
+    background: #ccc;
+}
+
+
+/* The progress bar (scroll indicator) */
+
+.progress-bar {
+    height: 8px;
+    background: #4caf50;
+    width: 0%;
 }
