--- a/app/assets/styles/modules/_site-about.css
+++ b/app/assets/styles/modules/_site-about.css
@@ -1,6 +1,7 @@
 .site-about {
-    height: 150vh;
+    height: 200vh;
     position: relative;
+    overflow: hidden;
     &__pic {
         width: 100%;
         height: 100vh;
@@ -17,29 +18,46 @@
         }
     }
     &__text {
-        border: 1px solid red;
+        //border: 1px solid red;
         width: 100%;
-        height: 50vh;
+        height: 100vh;
         position: absolute;
         top: 100vh;
         text-align: center;
-        background-color: rgba(0, 0, 0, .8);
+        //background-color: $color-grey-light;
         color: $color-white;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        font-size: 5rem;
+        font-size: 1.5rem;
         @mixin atSmall {
             font-size: 2rem;
         }
         @mixin atMedium {
-            font-size: 2rem;
+            font-size: 2.5rem;
         }
         @mixin atLarge {
-            font-size: 2rem;
+            font-size: 3rem;
+        }
+        @mixin atLarger {
+            font-size: 3.5rem;
         }
         &__intro {
-            margin-bottom: 4rem;
+            margin-bottom: 2rem;
         }
+    }
+}
+
+#video_about {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    @mixin min169 {
+        width: 100%;
+        height: auto;
+    }
+    @mixin max169 {
+        width: auto;
+        height: 100%;
     }
 }
