--- a/app/assets/styles/modules/_site-experience.css
+++ b/app/assets/styles/modules/_site-experience.css
@@ -1,11 +1,11 @@
 .site-experience {
     height: 150vh;
     position: relative;
-    background-color: #474e5d;
+    background-color: $color-one-light;
     /* The actual timeline (the vertical ruler) */
     &__timeline {
         position: relative;
-        max-width: 1200px;
+        max-width: 1400px;
         margin: 0 auto;
     }
     &__timeline::after {
@@ -82,6 +82,50 @@
         background-color: white;
         position: relative;
         border-radius: 6px;
+        font-size: 1rem;
+        text-align: center;
+        line-height: 2rem;
+        @mixin atSmall {
+            font-size: 1.1rem;
+        }
+        @mixin atMedium {
+            font-size: 1.3rem;
+        }
+        @mixin atLarge {
+            font-size: 1.5rem;
+        }
+    }
+}
+
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+
+@media screen and (max-width: 600px) {
+    /* Place the timelime to the left */
+    .site-experience__timeline::after {
+        left: 31px;
+    }
+    /* Full-width containers */
+    .site-experience__container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+    /* Make sure that all arrows are pointing leftwards */
+    .site-experience__container::before {
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
+    /* Make sure all circles are at the same spot */
+    .site-experience--left::after,
+    .site-experience--right::after {
+        left: 15px;
+    }
+    /* Make all right containers behave like the left ones */
+    .site-experience--right {
+        left: 0%;
     }
 }
 
