--- a/app/assets/styles/modules/_page-header.css
+++ b/app/assets/styles/modules/_page-header.css
@@ -44,15 +44,15 @@
 
 .progress-container {
     width: 100%;
-    height: 8px;
-    background: #ccc;
+    height: .5rem;
+    background: $color-grey-light;
 }
 
 
 /* The progress bar (scroll indicator) */
 
 .progress-bar {
-    height: 8px;
-    background: #4caf50;
+    height: .5rem;
+    background: $color-three;
     width: 0%;
 }
