--- a/app/assets/styles/modules/_site-about.css
+++ b/app/assets/styles/modules/_site-about.css
@@ -24,8 +24,9 @@
         position: absolute;
         top: 100vh;
         text-align: center;
-        //background-color: $color-grey-light;
-        color: $color-white;
+        background-color: rgba(0, 0, 0, .7);
+        background-attachment: fixed;
+        color: rgb(218, 217, 217);
         display: flex;
         flex-direction: column;
         justify-content: center;
