--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -3,9 +3,12 @@
 @import "global/_mixins.css";
 @import "modules/_animations.css";
 @import "modules/_static-letters.css";
+@import "modules/_page-header.css";
 @import "modules/_site-home.css";
 @import "modules/_site-about.css";
 @import "modules/_site-experience.css";
 @import "modules/_site-education.css";
 @import "modules/_site-skills.css";
-@import "modules/_page-header.css";
+@import "modules/_site-portfolio.css";
+@import "modules/_site-contact.css";
+@import "modules/_site-footer.css";
