Header functionality implemented

--- a/app/assets/styles/global/_variables.css
+++ b/app/assets/styles/global/_variables.css
@@ -21,7 +21,7 @@ $color-grey-dark: #4B5350;
 /*  FONT */
 
 $default-size: 1.4rem;
-$font-big: "Neue Montreal";
+$font-big: "Roboto";
 $font-main: "Playfair Display";
 
 /*  GRID */
