--- a/app/assets/styles/modules/_site-portfolio.css
+++ b/app/assets/styles/modules/_site-portfolio.css
@@ -1,29 +1,48 @@
 .site-portfolio {
+    //border: 1px solid green;
     height: 100vh;
     position: relative;
+    @mixin atSmall {
+        height: 100vh;
+    }
     &__citm {
         width: 100%;
         height: 100%;
         &__image {
-            width: 60%;
-            height: 100%;
+            //border: 1px solid red;
+            position: absolute;
+            width: 100%;
+            height: 60%;
             left: 0;
+            top: 40%;
             background-image: url('./assets/images/citm-img.png');
             background-size: contain;
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: top;
+            @mixin atSmall {
+                width: 60%;
+                height: 100%;
+                left: 0;
+                top: 0;
+                background-position: center;
+            }
         }
         &__details {
-            //border: 1px solid red;
             position: absolute;
-            width: 40%;
-            height: 100%;
+            width: 100%;
+            height: 40%;
             top: 0;
-            left: 60%;
+            left: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            @mixin atSmall {
+                width: 40%;
+                height: 100%;
+                top: 0;
+                left: 60%;
+            }
             &--item {
                 color: $color-grey;
                 font-size: 2rem;
