--- a/app/assets/styles/modules/_site-education.css
+++ b/app/assets/styles/modules/_site-education.css
@@ -10,7 +10,7 @@
     transform: translate(-50%, -50%);
     width: 100%;
     margin: 0 auto;
-    padding-top: 5rem;
+    //padding-top: 5rem;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-row-gap: 3rem;
