--- a/app/assets/styles/modules/_site-portfolio.css
+++ b/app/assets/styles/modules/_site-portfolio.css
@@ -33,6 +33,7 @@
             height: 40%;
             top: 0;
             left: 0;
+            //margin-left: -5rem;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -48,7 +49,7 @@
                 font-size: 2rem;
                 margin-bottom: 1rem;
                 & a {
-                    text-decoration: wavy;
+                    text-decoration: none;
                 }
             }
         }
