Contact page, footer and cursor finished

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -12,3 +12,5 @@
 @import "modules/_site-portfolio.css";
 @import "modules/_site-contact.css";
 @import "modules/_site-footer.css";
+@import "modules/_social-media.css";
+@import "modules/_cursor.css";
