--- a/app/assets/styles/modules/_site-contact.css
+++ b/app/assets/styles/modules/_site-contact.css
@@ -4,19 +4,24 @@
     background: linear-gradient(rgba($color-one-light, .9), rgba($color-two-light, .9));
     background-attachment: fixed;
     &__container {
-        width: 60%;
-        height: 60%;
+        width: 100%;
+        height: 70%;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -25%);
         background-color: rgba(255, 255, 255, .6);
         //color: white;
+        padding-top: 10rem;
         display: flex;
         flex-direction: column;
         align-items: center;
-        //justify-content: center;
+        justify-content: center;
         z-index: 2;
+        @mixin atSmall {
+            width: 60%;
+            height: 60%;
+        }
     }
     &__drawing {
         border-radius: 100px;
@@ -25,7 +30,18 @@
         height: 260px;
         position: absolute;
         top: -130px;
-        //margin-bottom: -130px;
         border: .5rem solid rgba(255, 255, 255, .6);
+    }
+    &__title {
+        color: $color-grey;
+        //font-family: $font-big, sans-serif;
+        font-size: 4rem;
+        margin-bottom: 1rem;
+    }
+    &__element {
+        color: $color-grey;
+        font-family: $font-big, sans-serif;
+        font-size: 2rem;
+        margin-bottom: 1rem;
     }
 }
